--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@ and open the template in the editor.
             <ul>
                 <li><a href="version1.html">Version One</a></li>
                 <li><a href="version2.jsp">Version Two</a></li>
+                <li><a href="version3.jsp">Version Three</a></li>
             </ul>
         </div>
     </body>
