Added version four using EL.

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@ and open the template in the editor.
                 <li><a href="version1.html">Version One</a></li>
                 <li><a href="version2.jsp">Version Two</a></li>
                 <li><a href="version3.jsp">Version Three</a></li>
+                <li><a href="version4.jsp">Version Four</a></li>
             </ul>
         </div>
     </body>
